@@ -60,6 +60,7 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  [Git::Tag]
  [BumpVersionAfterRelease]
  munge_makefile_pl = 0
+ munge_build_pl = 0
  [Git::Commit / Commit_Version_Bump]
  allow_dirty_match = ^(?:lib|script|bin)/
  commit_msg = Bump version
