@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Also set munge_build_pl = 0 for BumpVersionAfterRelease
 
 0.029     2016-09-29 15:14:30 EDT
   - RewriteVersion does not modify files in tree so [Git::Commit] does not need to allow for that
